welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:9: error: not found: value Direction
	Direction.EAST
        ^PatternPicture:20: error: not found: value Direction
	setDirection(Direction.EAST)
                     ^PatternPicture:24: error: not found: value Direction
	setDirection(Direction.WEST)
                     ^PatternPicture:35: error: not found: value Direction
	setDirection(Direction.WEST)
                     ^PatternPicture:51: error: not found: value Direction
	setDirection(Direction.EAST)
                     ^