welcome.lessons.welcome.methods.picture.PatternPicture.scala.code
def marquer()
{
	baisseBrosse()
	leveBrosse()
}
def DiagHautGauche(c:Color)
{
	Direction.EAST
	setCouleurBrosse(c)
	avance()
	marquer()
	gauche()
	avance()
	gauche()
	avance()
	marquer()
	gauche()
	avance()
	setDirection(Direction.EAST)
}
def DiagHautDroite(c:Color)
{
	setDirection(Direction.WEST)
	setCouleurBrosse(c)
	avance()
	marquer()
	droite()
	avance()
	droite()
	avance()
	marquer()
	droite()
	avance()
	setDirection(Direction.WEST)
}
def motif()
{
	DiagHautGauche(Color.RED)
	avance(2)
	gauche()
	avance(2)
	DiagHautGauche(Color.GREEN)
	recule()
	DiagHautDroite(Color.YELLOW)
	recule(2)
	gauche()
	avance(2)
	DiagHautDroite(Color.BLUE)
	avance(2)
	setDirection(Direction.EAST)
	
}
def ligne_motif(n:Int)
{
	for(k<-1 to n)
	{
		motif()
		avance(4)
	}
}

override def run() {
	for(k<-1 to 2)
	{
		ligne_motif(2)
		gauche()
		avance(4)
	}
}
